--- a/src/panels/home.html
+++ b/src/panels/home.html
@@ -19,12 +19,12 @@
                 <div class="server">
                     <img class="server-img" src="assets/images/icon.png"/>
                     <div class="server-text">
-                        <div class="name">Server titre...</div>
-                        <div class="desc"><span class="red">Fermé</span> - 0ms</div>
+                        <div class="name">FKZ-RP</div>
+                        <div class="desc"><span class="green">Ouvert</span> - 0ms</div>
                     </div>
                     <div class="etat-text">
                         <div class="text">0</div>
-                        <div class="online off"></div>
+                        <div class="online on"></div>
                     </div>
                 </div>
             </div>
