--- a/src/panels/login.html
+++ b/src/panels/login.html
@@ -2,36 +2,38 @@
     <div class="login-card">
         <p>Utilisez votre compte <span class="store">Minecraft</span> pour vous connectez au launcher.</p>
         <div class="login-type">
-            <button class="mojang login-type-btn">Mojang</button>
+            <button class="mojang login-type-btn">Offline</button>
             <button class="microsoft login-type-btn">Microsoft</button>
         </div>
         <button class="cancel cancel-login" style="display: none;">Annuler</button>
     </div>
 
     <div class="login-card-mojang">
+
         <div class="card-body">
             <small class="info-login">&nbsp;</small>
 
             <div class="login-card-mojang-input">
-                <label>Adresse mail</label>
+                <label> Pseudo </label>
                 <input type="text" class="Mail login-mojang-input" spellcheck="false">
                 <small class="error-mail">&nbsp;</small>
             </div>
-
-            <div class="login-card-mojang-input">
-                <label>Mot de passe</label>
-                <input type="password" class="Password login-mojang-input" spellcheck="false">
-                <small class="error-password">&nbsp;</small>
-            </div>
-
+            
             <div class="login-options">
-                <span class="password-reset">Mot de passe oublié ?</span>
+                <span class="password-reset">Mot de passe oubliÃ© ?</span>
                 <div class="btn-option-login">
                     <button class="login-btn">Connexion</button>
                     <button class="cancel cancel-mojang">Annuler</button>
                 </div>
             </div>
+
         </div>
+    </div>
+    
+    <div class="login-card-mojang-inputeeeee">
+        <label></label>
+        <input type="password" class="Password login-card-mojang-inputeeeee" spellcheck="false">
+        <small class="error-password">&nbsp;</small>
     </div>
 
 </div>
