--- a/src/panels/home.html
+++ b/src/panels/home.html
@@ -1,8 +1,7 @@
 <div class="home-content">
     <div class="bottom-bar-home">
-        <button class="player-head"></button>
         <button class="settings-btn icon-settings"></button>
-
+        <button class="newsButtonText">News</button>
         <div class="play-element">
             <button class="play-btn">Jouer</button>
             <div class="download-content">
@@ -22,6 +21,8 @@
                         <div class="name">FKZ-RP</div>
                         <div class="desc"><span class="green">Ouvert</span> - 0ms</div>
                     </div>
+                    <div class="BV">Bienvenue</div>
+
                     <div class="etat-text">
                         <div class="text">0</div>
                         <div class="online on"></div>
@@ -31,3 +32,5 @@
         </div>
     </div>
 </div>
+<div id="avatarContainer" style="background-image: url(https://mc-heads.net/body/${accountSelect.uuid}/right);" >
+    <button id="avatarOverlay">Edit</button>
