--- a/src/panels/login.html
+++ b/src/panels/login.html
@@ -2,7 +2,7 @@
     <div class="login-card">
         <p>Utilisez votre compte <span class="store">Minecraft</span> pour vous connectez au launcher.</p>
         <div class="login-type">
-            <button class="mojang login-type-btn">Offline</button>
+            <button class="mojang login-type-btn">Crack</button>
             <button class="microsoft login-type-btn">Microsoft</button>
         </div>
         <button class="cancel cancel-login" style="display: none;">Annuler</button>
@@ -20,7 +20,7 @@
             </div>
             
             <div class="login-options">
-                <span class="password-reset">Mot de passe oubliÃ© ?</span>
+                <span class="password-reset">Mot de passe oublié ?</span>
                 <div class="btn-option-login">
                     <button class="login-btn">Connexion</button>
                     <button class="cancel cancel-mojang">Annuler</button>
